[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-mempalace"
version = "0.4.0"
description = "Collective knowledge network: private-first extracted memory with federation protocol, quality auto-tuning, and MemPalace adapter"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "Jeffyjefchat" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "ai", "memory", "llm", "mempalace", "federation",
    "rag", "collective-intelligence", "knowledge-network",
    "quality-tuning", "orchestrator", "token-network",
]
dependencies = []

[project.optional-dependencies]
mempalace = ["mempalace>=3.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/Jeffyjefchat/collective-knowledge-global-sharing-token-network-mempalace"
Repository = "https://github.com/Jeffyjefchat/collective-knowledge-global-sharing-token-network-mempalace"
Issues = "https://github.com/Jeffyjefchat/collective-knowledge-global-sharing-token-network-mempalace/issues"

[tool.setuptools]
packages = ["oracle_memory"]
