[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-mempalace"
version = "2.0.0"
description = "Oracle Protocol v2: persistent SQLite store, HTTP transport, GDPR compliance, federation, trust scoring, token incentives, and conflict resolution for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "Jeffyjefchat" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "ai", "memory", "llm", "oracle-protocol", "federation",
    "rag", "collective-intelligence", "knowledge-network",
    "quality-tuning", "orchestrator", "token-network",
]
dependencies = []

[project.optional-dependencies]
mempalace = ["mempalace>=3.0"]  # optional: external palace backend
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/Jeffyjefchat/oracle-protocol"
Repository = "https://github.com/Jeffyjefchat/oracle-protocol"
Issues = "https://github.com/Jeffyjefchat/oracle-protocol/issues"

[tool.setuptools]
packages = ["oracle_memory"]
